--- a/inleveren/gray_scott_vis.ipynb
+++ b/inleveren/gray_scott_vis.ipynb
@@ -88,7 +88,7 @@
     "    V += np.random.normal(scale=0.05, size=V.shape)\n",
     "    return gray_scott(U, V, Du, Dv, F, k, dt, dx, T)\n",
     "\n",
-    "def show_objects(inp):\n",
+    "def calc_objects(inp):\n",
     "    \"\"\"\n",
     "    Calculates the number and size of objects in a given array.\n",
     "    \n",
